--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -95,7 +95,7 @@
     <nav class="sheet-tabs npc tabs grid grid-5col" data-group="primary">
 
         <a class="item " data-tab="weapons">CHARS & WEAPONS</a>
-        <a class="item" data-tab="armor">ARMOR & EQUIPMENT</a>
+        <a class="item" data-tab="armor">SKILLS & EQUIPMENT</a>
         <a class="item" data-tab="tnt">TALENTS & TRAITS</a>
         <a class="item" data-tab="psykana">PSYKANA</a>
         <a class="item" data-tab="description">DESCRIPTION</a>
