--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -95,7 +95,7 @@
 
 
 
-                    <a class="list-item psy-name item-descr" data-name="{{this.name}}" data-item-descr="{{this.system.description.value}}">Name: {{this.name}}</a>
+                    <a class="list-item psy-name item-descr" data-name="{{this.name}}" data-item-descr="{{this.system.description.value}}">{{this.name}}</a>
 
 
 
@@ -243,7 +243,7 @@
 
             <div class="weapons grid grid-2col">
                 <div class="weapon-name">
-                    <span>Name: {{this.name}}</span>
+                    <span>{{this.name}}</span>
                 </div>
 
                 <div class="list-item">
@@ -384,7 +384,7 @@
             <div class="weapons grid grid-2col">
 
                 <div class="weapon-name">
-                    <span>Name: {{this.name}}</span>
+                    <span>{{this.name}}</span>
                 </div>
 
 
