--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -8,7 +8,7 @@
 
 
 
-    <div class="skills-header grid grid-7col">
+    <div class="skills-header skills-group grid grid-7col">
         <a class="skillItem sort-button" data-sort-type="name" data-path="name" data-item-type="skills">Skill</a>
         <a class="skillItem sort-button" data-sort-type="char" data-path="system.characteristic.value" data-item-type="skills">Characteristic</a>
         <a class="skillItem sort-button" data-sort-type="rank" data-path="system.value" data-item-type="skills">Rank</a>
