--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -1,9 +1,10 @@
 <div class="sheet-tnt flexcol">
     <a class="tnt-create button" data-type="talentntrait" title="Add a new Talent or Trait">Add Talent or Trait</a>
     <div class="list list3col grid grid-3col">
-        <a class="list-item sort-button" data-sort-type="name" data-path="name" data-item-type="talentsntraits">Name</a>
-        <span class="list-button"></span>
-        <span class="list-button"></span>
+        
+        <a class="list-item-header sort-button" data-sort-type="name" data-path="name" data-item-type="talentsntraits">Name</a>
+        <span class="list-item-header"></span>
+        <span class="list-item-header-last"></span>
         {{#each actor.talentsntraits as |t key|}}
         
             <a class="item-descr list-item drag" data-id="{{t._id}}" data-name="{{t.name}}" data-item-descr="{{t.system.description.value}}">{{t.name}}{{#unless (compareString "N/A" t.system.specialisation.value)}} ({{t.system.specialisation.value}}){{/unless}} </a>
