--- a/templates/item/item-armor-sheet.html
+++ b/templates/item/item-armor-sheet.html
@@ -51,7 +51,7 @@
     </div>
     {{#if isGM}}
     <div class="flexcol">
-        <a class="modifier button">Modifiers</a>
+        <a class="modifier button">Active Effects</a>
     </div>
     {{/if}}
     <div class="flexcol">
