--- a/templates/item/item-spaceshipComponent-sheet.html
+++ b/templates/item/item-spaceshipComponent-sheet.html
@@ -28,7 +28,7 @@
     </div>
     {{#if isGM}}
     <div class="flexcol">
-        <a class="modifier button">Modifiers</a>
+        <a class="modifier button">Active Effect</a>
     </div>
     {{/if}}
     <div class="item-description">
