--- a/templates/item/item-talentntrait-sheet.html
+++ b/templates/item/item-talentntrait-sheet.html
@@ -30,7 +30,7 @@
     Don't change this unless you know what youre doing!
 
     <div class="flexcol">
-        <a class="modifier button">Modifiers</a>
+        <a class="modifier button">Active Effect</a>
     </div>
 
     <div class="flexcol">
