--- a/templates/actor/knightParts/combat.html
+++ b/templates/actor/knightParts/combat.html
@@ -174,7 +174,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
@@ -246,7 +246,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
@@ -418,7 +418,7 @@
                                     {{#select flags.fortyk.currentprofile}}
                                     <option value="">{{this._source.name}}</option>
 
-                                    {{#each flags.fortyk.profiles}}
+                                    {{#each flags.fortyk.instancedProfiles}}
                                     <option value="{{this.uuid}}">{{this.name}}</option>
                                     {{/each}}
                                     {{/select}}
@@ -490,7 +490,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
@@ -652,7 +652,7 @@
                                     {{#select flags.fortyk.currentprofile}}
                                     <option value="">{{this._source.name}}</option>
 
-                                    {{#each flags.fortyk.profiles}}
+                                    {{#each flags.fortyk.instancedProfiles}}
                                     <option value="{{this.uuid}}">{{this.name}}</option>
                                     {{/each}}
                                     {{/select}}
@@ -724,7 +724,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
@@ -895,7 +895,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
@@ -968,7 +968,7 @@
                                 {{#select flags.fortyk.currentprofile}}
                                 <option value="">{{this._source.name}}</option>
 
-                                {{#each flags.fortyk.profiles}}
+                                {{#each flags.fortyk.instancedProfiles}}
                                 <option value="{{this.uuid}}">{{this.name}}</option>
                                 {{/each}}
                                 {{/select}}
