--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -92,7 +92,7 @@
                                     {{#select flags.fortyk.currentprofile}}
                                     <option value="">{{this._source.name}}</option>
 
-                                    {{#each flags.fortyk.profiles}}
+                                    {{#each flags.fortyk.instancedProfiles}}
                                     <option value="{{this.uuid}}">{{this.name}}</option>
                                     {{/each}}
                                     {{/select}}
@@ -174,7 +174,7 @@
                                     {{#select flags.fortyk.currentprofile}}
                                     <option value="">{{this._source.name}}</option>
 
-                                    {{#each flags.fortyk.profiles}}
+                                    {{#each flags.fortyk.instancedProfiles}}
                                     <option value="{{this.uuid}}">{{this.name}}</option>
                                     {{/each}}
                                     {{/select}}
