--- a/templates/item/item-rangedWeapon-sheet.html
+++ b/templates/item/item-rangedWeapon-sheet.html
@@ -195,7 +195,7 @@
                 {{#each flags.fortyk.profiles}}
                 <select class="profile-select" data-index="{{@index}}">
                     {{#select this}}
-
+                     <option value="">Select a profile</option>
                     {{#each ../rangedWeapons}}
                     <option value="{{this.uuid}}">{{this.name}}</option>
                     {{/each}}
