--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -259,7 +259,7 @@
                         {{#select flags.fortyk.currentprofile}}
                         <option value="">{{this._source.name}}</option>
 
-                        {{#each flags.fortyk.profiles}}
+                        {{#each flags.fortyk.instancedProfiles}}
                         <option value="{{this.uuid}}">{{this.name}}</option>
                         {{/each}}
                         {{/select}}
@@ -415,7 +415,7 @@
                         {{#select flags.fortyk.currentprofile}}
                         <option value="">{{this._source.name}}</option>
 
-                        {{#each flags.fortyk.profiles}}
+                        {{#each flags.fortyk.instancedProfiles}}
                         <option value="{{this.uuid}}">{{this.name}}</option>
                         {{/each}}
                         {{/select}}
