--- a/templates/actor/dialogs/damage-dialog.html
+++ b/templates/actor/dialogs/damage-dialog.html
@@ -1,9 +1,9 @@
 <div class="flexcol">
-    <div class="flexrow"><label>Number of Hits:</label> <input type="text" id="modifier" name="hits" value="{{hits}}" data-dtype="Number"{{#if blast}} disabled {{/if}} autofocus/></div>
-    <div class="flexrow"><label>Bonus Damage:</label> <input type="text" id="dmg" name="dmg" value="{{dmg}}" data-dtype="Number" /></div>
-    <div class="flexrow"><label>Bonus Penetration:</label> <input type="text" id="pen" name="pen" value="0" data-dtype="Number" /></div>
-    <div class="flexrow"><label>Reroll damage equal or below:</label> <input type="text" id="reroll" name="reroll" value="{{reroll}}" data-dtype="Number" /></div>
+    <div class="flexrow"><label>Number of Hits:</label> <input type="number" id="modifier" name="hits" value="{{hits}}" data-dtype="Number"{{#if blast}} disabled {{/if}} autofocus/></div>
+    <div class="flexrow"><label>Bonus Damage:</label> <input type="number" id="dmg" name="dmg" value="{{dmg}}" data-dtype="Number" /></div>
+    <div class="flexrow"><label>Bonus Penetration:</label> <input type="number" id="pen" name="pen" value="0" data-dtype="Number" /></div>
+    <div class="flexrow"><label>Reroll damage equal or below:</label> <input type="number" id="reroll" name="reroll" value="{{reroll}}" data-dtype="Number" /></div>
    
-    <div class="flexrow"{{#unless dfa}}hidden{{/unless}}><label>Magnitude Damage:</label> <input type="text" id="magdmg" name="magdmg" value="0" data-dtype="Number" /></div>
+    <div class="flexrow"{{#unless dfa}}hidden{{/unless}}><label>Magnitude Damage:</label> <input type="number" id="magdmg" name="magdmg" value="0" data-dtype="Number" /></div>
     
 </div>
