--- a/templates/actor/dialogs/melee-attack-dialog.html
+++ b/templates/actor/dialogs/melee-attack-dialog.html
@@ -203,5 +203,5 @@
     
      <label class="section-title">Misc Modifiers: {{#if (greaterThan modifiers.miscMods -1)}}+{{/if}}{{modifiers.miscMods}}</label>
 <label class="section-title">Other Modifiers</label>
-<input type="text" id="modifier" name="other" value="{{modifiers.testMod}}">
+<input type="number" id="modifier" name="other" value="{{modifiers.testMod}}">
 </div>
