--- a/templates/actor/dialogs/spendExp-dialog-parts/custom.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/custom.html
@@ -4,5 +4,5 @@
 </div>
 <div class="flexcol">
     <span>Custom Cost:</span>
-    <input class="custom-cost" type="text"  value="{{cost}}">
+    <input class="custom-cost" type="number"  value="{{cost}}">
 </div>
