--- a/templates/actor/dialogs/spendExp-dialog-parts/psy-rating.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/psy-rating.html
@@ -6,5 +6,5 @@
 
 <div class="flexcol">
     <span>Discount:</span>
-    <input id="discount" class="discount" type="text"  value="0">
+    <input id="discount" class="discount" type="number"  value="0">
 </div>
