--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="descrRow flexcol">
                                 <span class="descrSpan">Tactical Speed:</span>
-                                <input type="text" class="combat-resources" data-target="system.secChar.speed.tactical" value="{{system.secChar.speed.tactical}}" data-dtype="Number"/>
+                                <input type="number" class="combat-resources" data-target="system.secChar.speed.tactical" value="{{system.secChar.speed.tactical}}" data-dtype="Number"/>
                             </div>
                             <div class="descrRow flexcol">
                                 <span class="descrSpan">Cruising Speed:</span>
@@ -33,14 +33,14 @@
                             </div>
                             <div class="descrRow flexcol">
                                 <span class="descrSpan">Manoeuvrability:</span>
-                                <input type="text" class="combat-resources" data-target="system.secChar.manoeuvrability.value" value="{{system.secChar.manoeuvrability.value}}" data-dtype="Number"/>
+                                <input type="number" class="combat-resources" data-target="system.secChar.manoeuvrability.value" value="{{system.secChar.manoeuvrability.value}}" data-dtype="Number"/>
                             </div>
                             <div class="descrRow flexcol">
                                 <label for="system.secChar.wounds.value" class="resource-label">Structural Integrity</label>
                                 <div class="resource-content flexrow flex-center flex-between">
-                                    <input type="text" class="combat-resources" data-target="system.secChar.wounds.value" value="{{system.secChar.wounds.value}}" data-dtype="Number"/>
+                                    <input type="number" class="combat-resources" data-target="system.secChar.wounds.value" value="{{system.secChar.wounds.value}}" data-dtype="Number"/>
                                     <span>/</span>
-                                    <input type="text" class="combat-resources" data-target="system.secChar.wounds.max" value="{{system.secChar.wounds.max}}" data-dtype="Number"/>
+                                    <input type="number" class="combat-resources" data-target="system.secChar.wounds.max" value="{{system.secChar.wounds.max}}" data-dtype="Number"/>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                             <div class="list-item flexrow">
                                 <span>Clip: </span>
 
-                                <input class="item-text-input" type="text" data-target="system.clip.value" value="{{this.system.clip.value}}" name="this.system.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
+                                <input class="item-text-input" type="number" data-target="system.clip.value" value="{{this.system.clip.value}}" name="this.system.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
                                 <span> / </span>
                                 <span>{{this.system.clip.max}}</span>
 
@@ -288,9 +288,9 @@
                     {{/if}}
 
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" class="combat-resources" data-target="system.knight.heat.value" value="{{system.knight.heat.value}}" data-dtype="Number"/>
+                        <input type="number" class="combat-resources" data-target="system.knight.heat.value" value="{{system.knight.heat.value}}" data-dtype="Number"/>
                         <span>/</span>
-                        <input type="text" class="combat-resources" data-target="system.knight.heat.max" value="{{system.knight.heat.max}}" data-dtype="Number" />
+                        <input type="number" class="combat-resources" data-target="system.knight.heat.max" value="{{system.knight.heat.max}}" data-dtype="Number" />
 
                     </div>
 
@@ -312,19 +312,19 @@
                             <div class="flexcol">
                                 <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.ratingTotal}}" data-label="Crew Rating" data-char="">Crew Rating:</span>
                                 <span class="descrSpan"></span>
-                                <input type="text" class="combat-resources" data-target="system.crew.rating" value="{{system.crew.rating}}" data-dtype="Number"/>
+                                <input type="number" class="combat-resources" data-target="system.crew.rating" value="{{system.crew.rating}}" data-dtype="Number"/>
                             </div>
 
                             <div class="flexcol">
                                 <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.ws}}" data-label="Crew WS" data-char="">Crew WS:</span>
                                 <span class="descrSpan"></span>
-                                <input type="text" class="combat-resources" data-target="system.crew.ws" value="{{system.crew.ws}}" data-dtype="Number"/>
+                                <input type="number" class="combat-resources" data-target="system.crew.ws" value="{{system.crew.ws}}" data-dtype="Number"/>
                             </div>
 
                             <div class="flexcol">
                                 <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.bs}}" data-label="Crew BS" data-char="">Crew BS:</span>
                                 <span class="descrSpan"></span>
-                                <input type="text" class="combat-resources" data-target="system.crew.bs" value="{{system.crew.bs}}" data-dtype="Number"/>
+                                <input type="number" class="combat-resources" data-target="system.crew.bs" value="{{system.crew.bs}}" data-dtype="Number"/>
                             </div>
 
 
@@ -407,26 +407,26 @@
                         <div class="armor flexcol flex-group-center">
 
                             <span>Front</span>
-                            <input type="text" class="combat-resources" data-target="system.facings.front.armor" value="{{system.facings.front.armor}}" data-dtype="Number"/>
+                            <input type="number" class="combat-resources" data-target="system.facings.front.armor" value="{{system.facings.front.armor}}" data-dtype="Number"/>
                         </div>
                         <div class="armor flexcol flex-group-center">
 
                             <span>Left Side</span>
 
 
-                            <input type="text" class="combat-resources" data-target="system.facings.lSide.armor" value="{{system.facings.lSide.armor}}" data-dtype="Number"/>
+                            <input type="number" class="combat-resources" data-target="system.facings.lSide.armor" value="{{system.facings.lSide.armor}}" data-dtype="Number"/>
                         </div>
                         <div class="armor flexcol flex-group-center">
 
                             <span>Right Side</span>
 
-                            <input type="text" class="combat-resources" data-target="system.facings.rSide.armor" value="{{system.facings.rSide.armor}}" data-dtype="Number"/>
+                            <input type="number" class="combat-resources" data-target="system.facings.rSide.armor" value="{{system.facings.rSide.armor}}" data-dtype="Number"/>
                         </div>
                         <div class="armor flexcol flex-group-center">
 
                             <span>Rear</span>
 
-                            <input type="text" class="combat-resources" data-target="system.facings.rear.armor" value="{{system.facings.rear.armor}}" data-dtype="Number"/>
+                            <input type="number" class="combat-resources" data-target="system.facings.rear.armor" value="{{system.facings.rear.armor}}" data-dtype="Number"/>
                         </div>
                     </div>
 
